testsuite/tests/polykinds/T10451.stderr

T10451.hs:22:12: error:
    A 64-tuple is too large for GHC
      (max size is 62)
      Workaround: use nested tuples or define a data type
